src/develop/style.css
/*GENERAL STYLES*/

*, ::before, ::after {
  margin: 0;
  box-sizing: border-box;
}

body {
  font-family: 'Roboto', sans-serif;
}

button, .form-input {
  width: 10rem;
}

.uviGood {
  background-color: green;
  color: white;
}

.uviModerate {
  background-color: yellow;
  color: black;
}

.uviBad {
  background-color: red;
  color: white;
}

.uviExtreme {
  background-color: blueviolet;
  color: white;
}



@media screen and (max-width: 600px) {
  
  body {
    display: flex;
    flex-direction: column;
    justify-content: center;
    text-align: center !important;
  }

  #currentCard {
    display: flex !important;
    flex-direction: column !important;
    justify-content: center !important;
  }
  
  #weekly { 
    display: flex !important;
    flex-direction: column !important;
    text-align: center;
  }
}

